# paper-search

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  schemas.py
.claude/commands/: scaffold-data.md  scaffold-eval.md  scaffold-graph-reason.md  scaffold-nlp.md  scaffold-retrieval.md  scaffold-ui.md
.streamlit/: config.toml
data/: HANDOFF.md  __init__.py  corpus.py
data/cache/: citation_graph.pkl  embeddings.npy  faiss.index  ids.json  papers.json
data/parse/: __init__.py  grobid_client.py
data/sources/: __init__.py  openalex.py  s2_contexts.py  seed_papers.py
docs/: corpus_gap_request_for_a.md  demo_script_d.md  eval_findings_d.md  method_match_followup_for_bc.md  onboarding.md
eval/: HANDOFF.md  __init__.py  error_analysis.py  gold_set.json  gold_set.py  history.py  metrics.py  run.py
nlp/: HANDOFF.md  __init__.py  config.py
nlp/citation_intent/: __init__.py  annotate_graph.py  classifier.py  train_scicite.py
retrieval/: HANDOFF.md  __init__.py  bm25.py  compare.py  dense.py  graph_reason.py  hybrid.py  method_match.py  rerank.py
spike/: __init__.py  __main__.py  build_graph.py  build_index.py  config.py  embed.py  fetch.py  probe_llm.py  search.py
tests/: test_annotate_graph.py  test_build_graph.py  test_citation_intent.py  test_corpus.py  test_eval.py  test_graph_reason.py  test_method_card.py  test_openalex.py  test_retrieval.py  test_s2_contexts.py  test_schemas.py  test_scientific_ner.py  test_search.py  test_seed_papers.py  test_ui_api.py
ui/: HANDOFF.md  api.py  app.py  query_params.py  related_work_prompt.py  style.py
(+836 files in other folders)
