[project]
name = "paper-search"
version = "0.1.0"
description = "GNN-based recsys paper semantic search + citation reasoning (NLP course project)"
requires-python = ">=3.10,<3.13"
dependencies = [
    "requests>=2.31",
    "python-dotenv>=1.0",
    "numpy>=1.26,<2.0",
    # adapters / transformers / torch are version-sensitive together; pinned from `uv pip freeze`.
    "torch==2.12.0",
    "transformers==4.57.6",
    "adapters==1.3.0",
    "faiss-cpu>=1.8",
    "networkx>=3.2",
    # pinned: spike uses st.components.v1.html for the PyVis iframe, deprecated for removal
    # after 2026-06-01. UI owner to migrate before unpinning.
    "streamlit==1.57.0",
    "pyvis>=0.3.2",
    "openai>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "black>=24.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
